[BAYAN] Added padding to prevent overlap

--- a/src/app/navbar/navbar.css
+++ b/src/app/navbar/navbar.css
@@ -1,3 +1,7 @@
+body {
+  padding-top: 66px;
+}
+
 .navbar {
   background: rgb(0, 74, 173);
   background: linear-gradient(
